--- a/styles/style.scss
+++ b/styles/style.scss
@@ -181,6 +181,7 @@ header {
     width: 100%;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 
 }
 
@@ -546,11 +547,11 @@ footer {
 @media screen and (max-width: 1280px) {
 
     header {
-    padding: 0;
+    padding: 0px;
     }
 
     .navbar {
-        width: max-content;
+        width: 130px;
 
 
     }
