--- a/styles/style.scss
+++ b/styles/style.scss
@@ -170,10 +170,7 @@ header {
 
 
 .hero > h2, .general-description > h2 {
-    padding-top: 0.5rem;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-bottom: 2.5rem;
+    padding: 0.5rem 20% 2.5rem;
 }
 
 .button-container {
